--- a/assets/fieldsofsalt/lang/en.json
+++ b/assets/fieldsofsalt/lang/en.json
@@ -1,5 +1,25 @@
 {
+	"fieldsofsalt:block-connector-bauxite-*": "Evaporation pond connector (Bauxite)",
+	"fieldsofsalt:block-connector-whitemarble-*": "Evaporation pond connector (White marble)",
+	"fieldsofsalt:block-connector-greenmarble-*": "Evaporation pond connector (Green marble)",
+	"fieldsofsalt:block-connector-redmarble-*": "Evaporation pond connector (Pink cream marble)",
+	"fieldsofsalt:block-connector-chert-*": "Evaporation pond connector (Chert)",
+	"fieldsofsalt:block-connector-conglomerate-*": "Evaporation pond connector (Conglomerate)",
+	"fieldsofsalt:block-connector-limestone-*": "Evaporation pond connector (Limestone)",
+	"fieldsofsalt:block-connector-peridotite-*": "Evaporation pond connector (Peridotite)",
+	"fieldsofsalt:block-connector-phyllite-*": "Evaporation pond connector (Phyllite)",
+	"fieldsofsalt:block-connector-slate-*": "Evaporation pond connector (Slate)",
+	"fieldsofsalt:block-connector-basalt-*": "Evaporation pond connector (Basalt)",
+	"fieldsofsalt:block-connector-andesite-*": "Evaporation pond connector (Andesite)",
+	"fieldsofsalt:block-connector-chalk-*": "Evaporation pond connector (Chalk)",
+	"fieldsofsalt:block-connector-claystone-*": "Evaporation pond connector (Claystone)",
+	"fieldsofsalt:block-connector-granite-*": "Evaporation pond connector (Granite)",
+	"fieldsofsalt:block-connector-sandstone-*": "Evaporation pond connector (Sandstone)",
+	"fieldsofsalt:block-connector-shale-*": "Evaporation pond connector (Shale)",
+	"fieldsofsalt:block-connector-suevite-*": "Evaporation pond connector (Suevite)",
+	"fieldsofsalt:block-connector-kimberlite-*": "Evaporation pond connector (Kimberlite)",
 	"fieldsofsalt:block-connector-*": "Evaporation pond connector",
+
 	"fieldsofsalt:block-pondmain": "Evaporation pond",
 	"fieldsofsalt:block-channel-*": "Liquid channel",
 	"fieldsofsalt:block-source-*": "Liquid source",
